--- a/expressWeb/views/about.hbs
+++ b/expressWeb/views/about.hbs
@@ -61,7 +61,7 @@
 
                     <div class="col-md-6 col-12 main_header_right align-items-center">
                         <figure>
-                            <img src="./images/aboutme.jpg" alt="sachin">
+                            <img src="./images/about.png" alt="sachin">
                         </figure>    
                     </div>
 
