--- a/expressWeb/views/index.hbs
+++ b/expressWeb/views/index.hbs
@@ -71,13 +71,13 @@
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="w-100" src="./images/img1.PNG" alt="First slide">
+                                <img class="w-100" src="./images/bg1.png" alt="First slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./images/img2.jpg" alt="Second slide">
+                                <img class="w-100" src="./images/bg2.png" alt="Second slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="w-100" src="./images/img3.png" alt="Third slide">
+                                <img class="w-100" src="./images/bg3.png" alt="Third slide">
                               </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
